# aisafeguard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  aisafe.example.yaml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  commitlint.yml  dependabot-automerge.yml  pr-title.yml  release.yml  semantic-tag.yml
benchmarks/: bench_pipeline.py
docs/: config-reference.md  getting-started.md  openai-compatible-ai-proxy.md  pii-redaction-llm.md  prompt-injection-protection.md
docs/community/: devto-medium-launch-post.md  promo-snippets.md
src/aisafeguard/: __init__.py  config.py  decorator.py  guard.py  models.py  pipeline.py  policy.py
src/aisafeguard/cli/: __init__.py  main.py
src/aisafeguard/integrations/: __init__.py
src/aisafeguard/proxy/: __init__.py  server.py
src/aisafeguard/scanners/: __init__.py  base.py  jailbreak.py  malicious_url.py  pii.py  prompt_injection.py  relevance.py  topic_ban.py  toxicity.py
src/aisafeguard/telemetry/: __init__.py  logger.py  otel.py
tests/: test_cli.py  test_pipeline_and_guard.py  test_redteam_cli.py
tests/integrations/: test_proxy_server.py  test_wrappers.py
tests/scanners/: test_injection_and_url.py  test_pii.py
